# excalidraw-mcp

./: .codespellrc  .coverage  .coverage-ratchet.json  .gitignore  .mcp.json  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  QWEN.md  README.md  RULES.md  SETUP.md  coverage.json  example.mcp.json  jest.config.cjs  main.py  package-lock.json  package.json  pyproject.toml  pytest-results.xml  src_link  test_excalidraw_cli.py  tsconfig.json
.claude/: settings.local.json
.oneiric_cache/: runtime_health.json  runtime_telemetry.json  workflow_checkpoints.sqlite
.oneiric_cache/snapshots/: excalidraw-mcp_2026-01-02T12-37-11.json  excalidraw-mcp_2026-04-17T17-01-00.json  excalidraw-mcp_2026-04-19T23-17-30.json  excalidraw-mcp_2026-04-20T07-01-02.json  excalidraw-mcp_2026-05-03T00-32-56.json  excalidraw-mcp_2026-05-07T05-13-10.json
docs/: WEBSOCKET_IMPLEMENTATION_SUMMARY.md
e2e-tests/: sync.e2e.test.ts
examples/: websocket_client_examples.py
excalidraw_mcp/: __init__.py  __main__.py  cli.py  config.py  element_factory.py  export.py  export_service.py  http_client.py  mcp_tools.py  process_manager.py  server.py
excalidraw_mcp/.skylos/: cache.sqlite
excalidraw_mcp/mcp/: __init__.py  websocket_tools.py
excalidraw_mcp/monitoring/: alerts.py  circuit_breaker.py  health_checker.py  metrics.py  supervisor.py
excalidraw_mcp/websocket/: __init__.py  auth.py  server.py  tls_config.py
frontend/src/: App.tsx
src/: config.ts  server.ts  types.ts
src/middleware/: auth.ts  security.ts  validation.ts
src/storage/: element-storage.ts
src/utils/: delta-compression.ts
src/websocket/: message-batcher.ts
test/: config.test.ts  setup.ts
test/storage/: element-storage.test.ts
test/unit/: delta-compression.test.ts
tests/: __init__.py  conftest.py  test_config.py  test_excalidraw_runtime_simple.py  test_export.py  test_http_client.py  test_schema_validation.py  test_websocket_server.py
tests/integration/: test_mcp_tools.py  test_monitoring_integration.py
tests/performance/: test_element_performance.py
tests/security/: test_input_validation.py
tests/unit/: test_circuit_breaker.py  test_cli.py  test_cli_additional.py  test_config.py  test_config_coverage.py  test_coverage_improvements.py  test_element_factory.py  test_element_factory_comprehensive.py  test_element_factory_coverage.py  test_element_factory_property_based.py  test_export_comprehensive.py  test_final_coverage.py  test_final_main_blocks.py  test_health_checker.py  test_http_client_coverage.py  test_main_blocks.py  test_mcp_tools_comprehensive.py  test_mcp_tools_coverage.py  test_mcp_tools_unit.py  test_monitoring_supervisor.py  test_process_manager.py  test_process_manager_coverage.py  test_server.py  (+1 more)
(+2 files in other folders)
