[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "excalidraw-mcp"
version = "0.1.0"
description = "MCP server for Excalidraw diagram management with canvas sync"
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Monitoring"
]
authors = [
    { name = "Les Leslie", email = "les@wedgwoodwebworks.com" }
]
requires-python = ">=3.13"
dependencies = [
    "fastmcp>=2.11.3",
    "httpx>=0.28.1",
    "pydantic>=2.11.7",
    "psutil>=6.1.1",
    "pyjwt>=2.10.1",
    "cryptography>=45.0.6",
]
license = {text = "BSD-3-CLAUSE"}

[dependency-groups]
dev = [
    "crackerjack",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "pytest-cov>=6.2.1",
    "pytest-mock>=3.14.1",
    "respx>=0.22.0",
]

[project.scripts]
excalidraw-mcp = "excalidraw_mcp.server:main"

[project.urls]
"Homepage" = "https://github.com/lesleslie/excalidraw-mcp"
"Repository" = "https://github.com/lesleslie/excalidraw-mcp"

[tool.hatch.build.targets.wheel]
packages = ["excalidraw_mcp"]

[tool.uv.sources]
crackerjack = { path = "../crackerjack", editable = true }

[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=excalidraw_mcp",
    "--cov-report=term-missing:skip-covered",
    "--cov-report=html:htmlcov",
    "--cov-report=xml",
    "--cov-fail-under=85",
    "--junitxml=pytest-results.xml",
    "--tb=short",
    "-p", "no:warnings",
]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "unit: Unit tests for individual components",
    "integration: Integration tests between components",
    "e2e: End-to-end tests with canvas server",
    "slow: Slow tests (>1s)",
    "security: Security-focused tests",
    "performance: Performance and load tests",
    "smoke: Quick smoke tests for basic functionality",
    "regression: Regression tests for known issues",
    "api: API endpoint tests",
    "websocket: WebSocket communication tests",
    "mcp: MCP protocol tests",
    "canvas: Canvas server interaction tests",
    "external: Tests requiring external services",
]
filterwarnings = [
    "error",
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
    "ignore::pytest.PytestUnraisableExceptionWarning",
]


